@@ -4888,6 +4888,7 @@ Ms Pac-Man (Stella extended codes):
       Note: If 'Filter' is checked, only the bankswitching types matching the ROM size are listed.
       <table cellpadding="2" border="1">
         <tr><th>&nbsp;Type&nbsp;</th><th>Description</th><th>File Extension<br>(to force type)</th></tr>
+		<tr><td>03e0 </td><td>8K Brazilian Parker Bros</td><td>.03e, .03e0</td></tr>
         <tr><td>0840 </td><td>8K EconoBanking</td><td>.084, .0840</td></tr>
         <tr><td>0FA0 </td><td>8K Fotomania</td><td>.0FA, .0FA0</td></tr>
         <tr><td>2IN1 &#185;</td><td>4-64K Multicart (2 games)</td><td>.2N1 </td></tr>
